[project]
name = "mcp-sample-code"
version = "0.1.0"
description = "Sample MCP server implementation"
authors = [
    {name = "Viorel", email = "viorel@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "httpx>=0.24.0",
    "aiofiles>=23.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "google-generativeai>=0.8.5",
    "diskcache>=5.6.3",
    "markdownify>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "sparkpost>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["sample_server.py"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true